[package]
name = "rail_forge"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = "0.7.7"
sqlx = { version = "0.8.2", features = [
    "runtime-tokio-native-tls",
    "postgres",
] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
pyo3 = { version = "0.22.5", features = ["extension-module"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3.16"
dotenv = "0.15.0"
prost = "0.13.3"
prost-types = "0.13.3"
